--- a/package.json
+++ b/package.json
@@ -18,10 +18,16 @@
   },
   "homepage": "https://github.com/ValentinAlvarez98/DesafioLogin#readme",
   "dependencies": {
+    "connect-mongo": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "cookieparser": "^0.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.0",
+    "express-session": "^1.17.3",
     "mongoose": "^7.4.1",
-    "nodemon": "^3.0.1"
+    "mongoose-paginate-v2": "^1.7.31",
+    "nodemon": "^3.0.1",
+    "session-file-store": "^1.5.0",
+    "socket.io": "^4.7.1"
   }
 }
